--- a/test/test.fsproj
+++ b/test/test.fsproj
@@ -1,11 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>e1cfaeac-3105-4559-880b-758d4acd604a</ProjectGuid>
+    <ProjectGuid>{E1CFAEAC-3105-4559-880B-758D4ACD604A}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>test</RootNamespace>
     <AssemblyName>test</AssemblyName>
@@ -39,12 +38,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
-    <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="FSharp.Core">
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.fs" />
@@ -53,8 +52,11 @@
   <ItemGroup>
     <ProjectReference Include="..\emulatedGLES2\emulatedGLES2.csproj">
       <Name>emulatedGLES2</Name>
-      <Project>{40d74ad2-eef4-47f3-864d-4877e8ec132d}</Project>
-      <Private>True</Private>
+      <Project>{40D74AD2-EEF4-47F3-864D-4877E8EC132D}</Project>
+    </ProjectReference>
+    <ProjectReference Include="..\dotGlfw3\dotGlfw3.fsproj">
+      <Project>{F108E0FF-7CB0-482D-9BF5-A2513D31266D}</Project>
+      <Name>dotGlfw3</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
