--- a/FsGLES2/FsGLES2.fsproj
+++ b/FsGLES2/FsGLES2.fsproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F108E0FF-7CB0-482D-9BF5-A2513D31266D}</ProjectGuid>
+    <ProjectGuid>{F88BC1E8-3117-4DCA-926A-EE912034681E}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>dotGlfw3</RootNamespace>
-    <AssemblyName>dotGlfw3</AssemblyName>
+    <RootNamespace>FsGLES2</RootNamespace>
+    <AssemblyName>FsGLES2</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -21,15 +21,14 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
+    <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
-    <Reference Include="FSharp.Core" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
-    <Compile Include="Script.fsx" />
-    <Compile Include="Glfw3.fs" />
+    <Compile Include="GLES2.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft SDKs\F#\3.1\Framework\v4.0\Microsoft.FSharp.Targets" />
 </Project>
